--- a/src/App.css
+++ b/src/App.css
@@ -333,10 +333,113 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
   margin: 0 auto;
   position: relative;
 }
-.skill-slider .item img {
+.skill-slider .item  {
   width: 50%;
   margin: 0 auto 15px auto;
 }
+
+
+
+.skilll{
+  width: 160px;
+  height: 160px;
+  /* background: cornflowerblue; */
+  position: relative;
+  margin-bottom: 10px;
+}
+
+.outer{
+  height: 160px;
+  width: 160px;
+  border-radius: 60%;
+  padding: 20px;
+
+
+}
+
+.inner{
+  height: 120px;
+  width: 120px;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  
+}
+
+#number{
+  font-weight: 600;
+  color: #fffafa;
+
+}
+
+.progressbar1 circle{
+  fill: none;
+  stroke: url(#GradientColor);
+  stroke-width: 20px;
+  stroke-dasharray: 472;
+  stroke-dashoffset: 472;
+  animation: anim1 2s linear forwards;
+}
+.progressbar2 circle{
+  fill: none;
+  stroke: url(#GradientColor);
+  stroke-width: 20px;
+  stroke-dasharray: 472;
+  stroke-dashoffset: 472;
+  animation: anim2 2s linear forwards;
+}
+.progressbar3 circle{
+  fill: none;
+  stroke: url(#GradientColor);
+  stroke-width: 20px;
+  stroke-dasharray: 472;
+  stroke-dashoffset: 472;
+  animation: anim3 2s linear forwards;
+}
+.progressbar4 circle{
+  fill: none;
+  stroke: url(#GradientColor);
+  stroke-width: 20px;
+  stroke-dasharray: 472;
+  stroke-dashoffset: 472;
+  animation: anim4 2s linear forwards;
+}
+
+
+svg{
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+
+
+@keyframes anim1 {
+  100%{
+    stroke-dashoffset: 55;
+  }
+}
+
+@keyframes anim2 {
+  100%{
+    stroke-dashoffset: 142;
+  }
+}
+
+
+@keyframes anim3 {
+  100%{
+    stroke-dashoffset: 189;
+  }
+}
+
+
+@keyframes anim4 {
+  100%{
+    stroke-dashoffset: 95;
+  }
+}
+
 .background-image-left {
   top: 28%;
   position: absolute;
